--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <header class="header">
-            <div class="logo_search nav">
+            <div class="header-inner nav">
                 <h1 class="logo">#FuniroFurniture</h1>
                 <div class="custom-search">
                     <span class="icon-search"></span>
@@ -19,67 +19,67 @@
                 </div>
             </div>
         </header>
-        <main class="gallery">
-            <div class="main-content">
-                <div class="main-content-img icn-fifty"><img src="img/table.jpg" alt="Table" /></div>
-                <div class="main-content-text">
-                    <h2 class="content-name">Lolito</h2>
-                    <span class="content-kinds">Luxury big sofa</span>
+        <main class="products">
+            <div class="product-card">
+                <div class="card-img icn-fifty"><img src="img/table.jpg" alt="Table" /></div>
+                <div class="card-text">
+                    <h2 class="product-name">Lolito</h2>
+                    <p class="product-kinds">Luxury big sofa</p>
                     <div class="several-prices">
-                        <span class="content-price">Rp 7.000.000</span>
-                        <span class="content-price-crossed">Rp 14.000.000</span>
+                        <span class="product-price">Rp 7.000.000</span>
+                        <span class="product-price-crossed">Rp 14.000.000</span>
                     </div>
                 </div>
             </div>
-            <div class="main-content">
-                <div class="main-content-img">
+            <div class="product-card">
+                <div class="card-img">
                     <img src="img/chair.jpg" alt="Chair" />
                     <span class="icn-new">New</span>
                 </div>
-                <div class="main-content-text">
-                    <h2 class="content-name">Respira</h2>
-                    <span class="content-kinds">Minimalist fan</span>
-                    <span class="content-price">Rp 500.000</span>
+                <div class="card-text">
+                    <h2 class="product-name">Respira</h2>
+                    <p class="product-kinds">Minimalist fan</p>
+                    <span class="product-price">Rp 500.000</span>
                 </div>
             </div>
-            <div class="main-content">
-                <div class="main-content-img"><img src="img/bed.jpg" alt="Bed" /></div>
-                <div class="main-content-text">
-                    <h2 class="content-name">Pingky</h2>
-                    <span class="content-kinds">Cute bed set</span>
+            <div class="product-card">
+                <div class="card-img"><img src="img/bed.jpg" alt="Bed" /></div>
+                <div class="card-text">
+                    <h2 class="product-name">Pingky</h2>
+                    <p class="product-kinds">Cute bed set</p>
                     <div class="several-prices">
-                        <span class="content-price">Rp 7.000.000</span>
-                        <span class="content-price-crossed">Rp 14.000.000</span>
+                        <span class="product-price">Rp 7.000.000</span>
+                        <span class="product-price-crossed">Rp 14.000.000</span>
                     </div>
                 </div>
             </div>
-            <div class="main-content">
-                <div class="main-content-img icn-star">
+            <div class="product-card">
+                <div class="card-img favorite">
                     <img src="img/books.jpg" alt="Bookshelf" />
                 </div>
-                <div class="main-content-text">
-                    <h2 class="content-name">Respira</h2>
-                    <span class="content-kinds">Minimalist fan</span>
-                    <span class="content-price">Rp 500.000</span>
+                <div class="card-text">
+                    <h2 class="product-name">Respira</h2>
+                    <p class="product-kinds">Minimalist fan</p>
+                    <span class="product-price">Rp 500.000</span>
                 </div>
             </div>
-            <div class="main-content">
-                <div class="main-content-img">
+            <div class="product-card">
+                <div class="card-img">
                     <img src="img/kitchen.jpg" alt="Kitchen" />
                     <span class="icn-new">New</span>
                 </div>
-                <div class="main-content-text">
-                    <h2 class="content-name">Lolito</h2>
-                    <span class="content-kinds">Luxury big sofa</span>
+                <div class="card-text">
+                    <h2 class="product-name">Lolito</h2>
+                    <p class="product-kinds">Luxury big sofa</p>
                     <div class="several-prices">
-                        <span class="content-price">Rp 7.000.000</span>
-                        <span class="content-price-crossed">Rp 14.000.000</span>
+                        <span class="product-price">Rp 7.000.000</span>
+                        <span class="product-price-crossed">Rp 14.000.000</span>
                     </div>
                 </div>
             </div>
         </main>
         <footer class="footer">
-            <div class="footer-nav nav">
+            <div class="footer-inner nav">
                 <div class="footer-items">
                     <a href="#" class="footer-item-link">home</a>
                     <a href="#" class="footer-item-link">about us</a>
